# phonebook

./: CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  release_notes.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  glossary.rst  index.rst  release_notes.rst
docs/source/background/: index.rst
docs/source/getting_started/: index.rst
docs/source/howto/: index.rst
docs/source/reference/: index.rst
src/phonebook/: __init__.py  _cli.py  _exceptions.py  _main.py
src/phonebook/_datastore/: __init__.py  base.py  json_.py  yaml_.py
tests/unit/: test_cli.py  test_package.py
tests/unit/_datastore/: __init__.py
tests/unit/_datastore/json_/: __init__.py
tests/unit/_datastore/json_/JSONDataStore/: __init__.py  conftest.py  test_create.py  test_delete.py  test_get.py  test_init.py  test_read.py  test_reload.py  test_update.py
tests/unit/_datastore/yaml_/: __init__.py
tests/unit/_datastore/yaml_/YAMLDataStore/: __init__.py  conftest.py  test_create.py  test_delete.py  test_get.py  test_init.py  test_read.py  test_reload.py  test_update.py
tests/unit/_main/: test_create.py  test_delete.py  test_get.py  test_read.py  test_set_data_store.py  test_update.py
