[metadata]
name = phonebook
version = file: VERSION

url = https://github.com/jhuitema/phonebook
download_url = https://github.com/jhuitema/phonebook.git
project_urls =
    GitHub = https://github.com/jhuitema/phonebook
    Issues = https://github.com/jhuitema/phonebook
    PyPI = https://pypi.org/jhuitema/phonebook

author = Josh Huitema
author_email = joshhuitema@gmail.com
maintainer = Josh Huitema
maintainer_email = joshhuitema@gmail.com

description = A library to store and search for users and their phone numbers and addresses.
long_description = file: README.rst
long_description_content_type = text/x-rst

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = True
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where=src

[options.extras_require]
doc =
    sphinx
    sphinx-autoapi
    sphinx-rtd-theme
test =
    coverage
    docutils
    pytest
    pytest-cov
    pytest-mock
    twine
